--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Create a jenkins job
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/job.xml') }}"
-    name: {{item}}
+    name: "{{item}}"
     password: "{{jenkins_password}}"
     url: http://54.205.243.132:8080
     user: admin
