--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,14 +1,5 @@
-- name: copy xml file to location
-  ansible.builtin.template:
-    src: job.xml
-    dest: /tmp/job.xml
-
-- name: Create a jenkins job
-  community.general.jenkins_job:
-    config: "{{ lookup('file', '/tmp/job.xml') }}"
-    name: "{{item}}"
-    password: "{{jenkins_password}}"
-    url: http://54.205.243.132:8080
-    user: admin
-  loop:
+- name: create pipeline jobs
+  ansible.builtin.include_tasks: "pipeline.yml"
+  loops:
+    - frontend
     - catalogue
