--- a/roles/jenkins/tasks/pipeline.yml
+++ b/roles/jenkins/tasks/pipeline.yml
@@ -1,3 +1,16 @@
+- name: copy folder xml file to location
+  ansible.builtin.template:
+    src: folder.xml
+    dest: /tmp/folder.xml
+
+- name: Create a jenkins job
+  community.general.jenkins_job:
+    config: "{{ lookup('file', '/tmp/folder.xml') }}"
+    name: "{{item.dir}}"
+    password: "{{jenkins_password}}"
+    url: http://172.31.36.116:8080
+    user: admin
+
 - name: copy xml file to location
   ansible.builtin.template:
     src: job.xml
@@ -6,7 +19,7 @@
 - name: Create a jenkins job
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/job.xml') }}"
-    name: "{{item}}"
+    name: "{{item.dir}}/{{item.name}}"
     password: "{{jenkins_password}}"
     url: http://172.31.36.116:8080
     user: admin
