--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,9 +1,9 @@
 - name: create pipeline jobs
   ansible.builtin.include_tasks: "pipeline.yml"
   loop:
-    - {{ name: "frontend", dir: "CIPipelines" }}
-    - {{ name: "catalogue", dir: "CIPipelines" }}
-    - {{ name: "user", dir: "CIPipelines" }}
-    - {{ name: "cart", dir: "CIPipelines" }}
-    - {{ name: "shipping", dir: "CIPipelines" }}
-    - {{ name: "payment", dir: "CIPipelines" }}
+    - { name: "frontend", dir: "CIPipelines" }
+    - { name: "catalogue", dir: "CIPipelines" }
+    - { name: "user", dir: "CIPipelines" }
+    - { name: "cart", dir: "CIPipelines" }
+    - { name: "shipping", dir: "CIPipelines" }
+    - { name: "payment", dir: "CIPipelines" }
