--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,3 +1,17 @@
+- name: copy folder xml file to location
+  ansible.builtin.template:
+    src: folder.xml
+    dest: /tmp/folder.xml
+
+- name: Create a folder {{item.dir}}
+  community.general.jenkins_job:
+    config: "{{ lookup('file', '/tmp/folder.xml') }}"
+    name: "{{item}}"
+    password: "{{jenkins_password}}"
+    url: http://172.31.36.116:8080
+    user: admin
+  loop: "{{folders}}"
+
 - name: create pipeline jobs
   ansible.builtin.include_tasks: "pipeline.yml"
   loop: "{{pipeline_jobs}}"
