--- a/roles/jenkins/tasks/pipeline.yml
+++ b/roles/jenkins/tasks/pipeline.yml
@@ -1,22 +1,9 @@
-- name: copy folder xml file to location
-  ansible.builtin.template:
-    src: folder.xml
-    dest: /tmp/folder.xml
-
-- name: Create a jenkins job
-  community.general.jenkins_job:
-    config: "{{ lookup('file', '/tmp/folder.xml') }}"
-    name: "{{item.dir}}"
-    password: "{{jenkins_password}}"
-    url: http://172.31.36.116:8080
-    user: admin
-
 - name: copy xml file to location
   ansible.builtin.template:
     src: job.xml
     dest: /tmp/job.xml
 
-- name: Create a jenkins job
+- name: Create a {{item.name}} job
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/job.xml') }}"
     name: "{{item.dir}}/{{item.name}}"
