--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -5,3 +5,6 @@ pipeline_jobs:
   - { name: "cart", dir: "CIPipelines" }
   - { name: "shipping", dir: "CIPipelines" }
   - { name: "payment", dir: "CIPipelines" }
+
+folders:
+  -CIPipelines
