--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -3,7 +3,7 @@
     src: folder.xml
     dest: /tmp/folder.xml
 
-- name: Create a folder {{item.dir}}
+- name: Create a folder {{item}}
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/folder.xml') }}"
     name: "{{item}}"
