--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -12,6 +12,11 @@
     user: admin
   loop: "{{folders}}"
 
-- name: create pipeline jobs
-  ansible.builtin.include_tasks: "pipeline.yml"
-  loop: "{{pipeline_jobs}}"
+- name: create multi branch pipeline jobs
+  ansible.builtin.include_tasks: "mbranch-mbranch-pipeline.yml"
+  loop: "{{ci_pipeline_jobs}}"
+
+- name: create Single branch pipeline jobs
+  ansible.builtin.include_tasks: "sbranch-mbranch-pipeline.yml"
+  loop: "{{sbranch_pipeline_jobs}}"
+
