--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -13,10 +13,10 @@
   loop: "{{folders}}"
 
 - name: create multi branch pipeline jobs
-  ansible.builtin.include_tasks: "mbranch-mbranch-pipeline.yml"
+  ansible.builtin.include_tasks: "mbranch-pipeline.yml"
   loop: "{{ci_pipeline_jobs}}"
 
 - name: create Single branch pipeline jobs
-  ansible.builtin.include_tasks: "sbranch-mbranch-pipeline.yml"
+  ansible.builtin.include_tasks: "sbranch-pipeline.yml"
   loop: "{{sbranch_pipeline_jobs}}"
 
